GenEx $<LINK_LIBRARY>: Add the support of properties attached to features

Fixes: #24504, #25954